# xmltojson-microservice

./: Dockerfile  LICENSE  README.md  app.py  pyproject.toml
.github/workflows/: ci-cd-dev.yml  ci-cd-production.yml  ci-cd-testing.yml
kube/dev/: deployment.yaml  runner.yaml  service.yaml
kube/production/: deployment.yaml  runner.yaml
kube/testing/: deployment.yaml  runner.yaml
morpher/: __init__.py
morpher/ehf/: __init__.py  routes.py
morpher/errors/: __init__.py  handlers.py
morpher/lib/: converter.py  minimal_invoice.py
morpher/minimal/: __init__.py  routes.py
service/: __init__.py
service/ehf/: __init__.py  routes.py
service/lib/: converter.py
tests/: test_morph_service.py  test_morpher.py
tests/fixtures/: data.py  server_client.py
tests/functional/: test_errors.py  test_minimal_routes.py  test_routes.py
tests/unit/: test_converter.py  test_minimizer.py
